role fixes
